# rust_hash_web

./: .env  Cargo.toml  auth.sqlite  readme.md
migrations/2023-05-18-103652_salt_and_hash/: down.sql  up.sql
src/: db.rs  encrypt.rs  main.rs  models.rs
src/db/: models.rs  schema.rs
src/encrypt/: utils.rs
