[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.163", features = ["derive"] }
rand = "0.8.5"
diesel =         { version = "*", default-features = false, features = ["sqlite"] }
dotenvy = "0.15.7"
byteorder = "1.4.3"